# urbes-viz

./: .gitignore  ADD_DATASET.md  README.md  README.xlsx  README_2.xlsx  data_explore_wrfout.ipynb  generate_temperature_tif.py  pyproject.toml  requirements-lock.txt  show_temperature_animation.py  terminal_history_gdal_tippecanoe_process.txt
.github/workflows/: deploy-pages.yml
frontend/: index.html  package-lock.json  package.json
frontend/.github/workflows/: deploy-pages.yml
frontend/public/parameters/: default.json
frontend/public/style/: dark.json  heatmap_style.json
frontend/src/components/: CustomSlider.vue  HourlySlider.vue  InfoTooltip.vue  JsonWebMap.vue  LegendMap.vue  MapLibreMap.vue
frontend/src/config/: mapConfig.ts
frontend/src/views/: HomeView.vue
processing/DAVE simulations/: Makefile  README.txt  process.py
processing/GWS2022/: Makefile
processing/Population and Households Statistics/: Makefile  process.py
