[project]
name = "urbes-viz"
version = "0.1.0"
description = "Urban visualization and data processing for URBES project"
requires-python = ">=3.10"
dependencies = [
    "geopandas>=0.14.0",
    "pandas>=2.0.0",
    "pyproj>=3.6.0",
    "shapely>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.8.0",
    "netCDF4>=1.6.0",
    "ipykernel>=6.29.0",
    "ipython>=8.25.0",
    "pydeck>=0.8.0",
]

[tool.uv]
dev-dependencies = []

[tool.uv.sources]

